# tui-tides

./: Cargo.toml  README.md  a.txt  b.py  m_url.txt  temps.txt
assets/: demo.mov
src/: apis.rs  app.rs  main.rs  panes.rs
src/apis/: meteo.rs  station.rs
src/panes/: search.rs  sunset.rs  tide.rs  weather.rs
